# skaff

./: .editorconfig  .exrc  .gitattributes  .gitignore  .travis.yml  CHANGELOG.md  CHANGELOG.rst  LICENSE.txt  MANIFEST.in  README.md  README.rst  requirements.txt  setup.py
doc/: Makefile  make.bat
doc/source/: conf.py  genmake.rst  index.rst  modules.rst  skaff.rst
doc/source/img/: cli.dot  output_tree.dot
genmake/: __init__.py  cli.py  clitools.py  config.py  core.py  genmake.py
genmake/config/: editorconfig.txt  gitignore.txt  travis.yml
genmake/config/c/: CMakeLists.txt
genmake/config/c/include/: cmnutil.h
genmake/config/c/src/: CMakeLists.txt  main.c
genmake/config/cpp/include/: cmnutil.hpp
genmake/license/: bsd2.txt  bsd3.txt  mit.txt
genmake/tests/: config_test.py  core_test.py  genmake_test.py  test_genmake.py
man/: Makefile  genmake.1  skaff.1  skaff.conf.5  skaff.json.5  skafftutorial.7
skaff/: __init__.py  cli.py  clitools.py  config.py  core.py  driver.py  info.py  manualtools.py
skaff/config/: Doxyfile  editorconfig.txt  skaff.conf
skaff/config/license/: bsd3.md  gpl2.md  mit.txt
skaff/config/template/: gdbinit.txt  gitattributes.txt  travis.yml
skaff/config/template/c/: CMakeLists.txt
skaff/config/template/c/src/: CMakeLists.txt  main.c
skaff/config/template/cpp/: CMakeLists.txt
skaff/config/template/cpp/src/: CMakeLists.txt  main.cpp
skaff/license/: bsd2.md  bsd2.txt  gpl3.md  mit.md
tests/: config_test.py  core_test.py  driver_test.py  info_test.py  manualtools_test.py
